--- a/app/src/main/res/layout/dialog_no_results.xml
+++ b/app/src/main/res/layout/dialog_no_results.xml
@@ -10,6 +10,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:padding="15dp"
         android:layout_height="wrap_content">
 
         <TextView
