--- a/app/src/main/res/layout/fragment_multiple_results.xml
+++ b/app/src/main/res/layout/fragment_multiple_results.xml
@@ -16,10 +16,13 @@
             android:id="@+id/rv_query_results"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@id/button_home"
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_home"
+            android:layout_margin="@dimen/small_margins"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="@{fragment::onClickButton}"
